tests/error/array_errors/new_array_wrong_length.err
Guppy compilation failed. Error in file $FILE:13

11:    @guppy(module)
12:    def main() -> array[int, 2]:
13:        return array(1, 2, 3)
                  ^^^^^^^^^^^^^^
GuppyTypeError: Expected expression of type `array[int, 2]`, got `array[int, 3]`
